src/objects/Tool_Access_History__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tool Access Histories</relationshipLabel>
        <relationshipName>Tool_Access_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>This field contains the new value of the Tool Access field after it changed.</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <description>This field contains the old value of the Tool Access field before it changed.</description>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tool Access History</label>
    <nameField>
        <displayFormat>TAH-{0000}</displayFormat>
        <label>Tool Access History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tool Access Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>